# dirty-equals

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  _redirects  mkdocs.yml  pyproject.toml  setup.py  versions.json
.github/workflows/: ci.yml  upload-previews.yml
0.10/: CNAME  index.html  objects.inv  sitemap.xml
0.10/internals/: index.html
0.10/search/: search_index.json
0.10/types/dict/: index.html
0.10/types/inspection/: index.html
0.10/types/numeric/: index.html
0.5/: 404.html  index.html  objects.inv  sitemap.xml
0.5/internals/: index.html
0.5/search/: search_index.json
0.5/types/boolean/: index.html
0.5/types/custom/: index.html
0.5/types/datetime/: index.html
0.5/types/dict/: index.html
0.5/types/inspection/: index.html
0.5/types/numeric/: index.html
0.5/types/other/: index.html
0.5/types/sequence/: index.html
0.5/types/string/: index.html
0.5/usage/: index.html
0.6/: 404.html  index.html  sitemap.xml
0.6/search/: search_index.json
0.6/types/boolean/: index.html
0.6/types/other/: index.html
0.6/types/sequence/: index.html
0.7/: index.html  sitemap.xml
0.7/search/: search_index.json
0.7/types/datetime/: index.html
0.7/types/dict/: index.html
0.7/types/inspection/: index.html
0.7/types/other/: index.html
0.7/types/string/: index.html
0.8/: index.html  objects.inv  sitemap.xml
0.8/search/: search_index.json
0.8/types/string/: index.html
0.9/: 404.html  index.html
0.9/search/: search_index.json
0.9/types/datetime/: index.html
0.9/types/numeric/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/internals/: index.html
dev/search/: search_index.json
dev/types/boolean/: index.html
dev/types/custom/: index.html
dev/types/datetime/: index.html
dev/types/dict/: index.html
dev/types/inspection/: index.html
dev/types/numeric/: index.html
dev/types/other/: index.html
dev/types/sequence/: index.html
dev/types/string/: index.html
dev/usage/: index.html
dirty_equals/: __init__.py  _base.py  _boolean.py  _compat.py  _datetime.py  _dict.py  _inspection.py  _list_tuple.py  _numeric.py  _other.py  _sequence.py  _strings.py  _typing.py  _utils.py  main.py  pytest_plugin.py  version.py
docs/: index.md  internals.md  plugins.py  requirements.txt  types.md  usage.md
docs/overrides/: main.html
docs/types/: boolean.md  custom.md  datetime.md  dict.md  inspection.md  numeric.md  other.md  sequence.md  string.md
latest/internals/: index.html
latest/types/boolean/: index.html
latest/types/custom/: index.html
latest/types/datetime/: index.html
latest/types/dict/: index.html
latest/types/inspection/: index.html
latest/types/numeric/: index.html
latest/types/other/: index.html
latest/types/sequence/: index.html
latest/types/string/: index.html
latest/usage/: index.html
requirements/: all.txt  docs.in  docs.txt  linting.in  linting.txt  pyproject.txt  tests.in  tests.txt
tests/: mypy_checks.py  requirements-linting.txt  requirements.txt  test_base.py  test_boolean.py  test_datetime.py  test_dict.py  test_docs.py  test_insert_assert.py  test_inspection.py  test_list_tuple.py  test_main.py  test_numeric.py  test_other.py  test_strings.py
