[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.version]
path = 'dirty_equals/version.py'

[project]
name = 'dirty-equals'
description = 'Doing dirty (but extremely useful) things with equals.'
authors = [{name = 'Samuel Colvin', email = 's@muelcolvin.com'}]
license = {file = 'LICENSE'}
readme = 'README.md'
classifiers = [
    'Development Status :: 4 - Beta',
    'Framework :: Pytest',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'Intended Audience :: System Administrators',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Environment :: Console',
    'Environment :: MacOS X',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Internet',
    'Typing :: Typed',
]
requires-python = '>=3.7'
dependencies = [
    'typing-extensions>=4.0.1',
    'pytz>=2021.3',
]
dynamic = ['version']

[project.urls]
Homepage = 'https://github.com/samuelcolvin/dirty-equals'
Documentation = 'https://dirty-equals.helpmanual.io'
Funding = 'https://github.com/sponsors/samuelcolvin'
Source = 'https://github.com/samuelcolvin/dirty-equals'
Changelog = 'https://github.com/samuelcolvin/dirty-equals/releases'

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "error"

[tool.coverage.run]
source = ["dirty_equals"]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise NotImplemented",
    "if TYPE_CHECKING:",
    "@overload",
]

[tool.black]
color = true
line-length = 120
target-version = ["py39"]
skip-string-normalization = true

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
color_output = true

[tool.mypy]
strict = true
warn_return_any = false
show_error_codes = true
