[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.version]
path = 'dirty_equals/version.py'

[project]
name = 'dirty-equals'
description = 'Doing dirty (but extremely useful) things with equals.'
authors = [{name = 'Samuel Colvin', email = 's@muelcolvin.com'}]
license = 'MIT'
readme = 'README.md'
classifiers = [
    'Development Status :: 4 - Beta',
    'Framework :: Pytest',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'Intended Audience :: System Administrators',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Environment :: Console',
    'Environment :: MacOS X',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Internet',
    'Typing :: Typed',
]
requires-python = '>=3.8'
dependencies = [
    'pytz>=2021.3;python_version<"3.9"',
]
optional-dependencies = {pydantic = ['pydantic>=2.4.2'] }
dynamic = ['version']

[project.urls]
Homepage = 'https://github.com/samuelcolvin/dirty-equals'
Documentation = 'https://dirty-equals.helpmanual.io'
Funding = 'https://github.com/sponsors/samuelcolvin'
Source = 'https://github.com/samuelcolvin/dirty-equals'
Changelog = 'https://github.com/samuelcolvin/dirty-equals/releases'

[tool.ruff]
line-length = 120
lint.extend-select = ['Q', 'RUF100', 'C90', 'UP', 'I']
lint.ignore = ['E721']
lint.flake8-quotes = {inline-quotes = 'single', multiline-quotes = 'double'}
lint.mccabe = { max-complexity = 14 }
lint.pydocstyle = { convention = 'google' }
format.quote-style = 'single'
target-version = 'py38'

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "error"

[tool.coverage.run]
source = ["dirty_equals"]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise NotImplemented",
    "if TYPE_CHECKING:",
    "@overload",
]

[tool.mypy]
strict = true
warn_return_any = false
show_error_codes = true
